<resources>
    <string name="app_name">CaramelWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="caramel_wallet">Caramel Wallet</string>
    <string name="image">image</string>
    <string name="welcome">Welcome !</string>
    <string name="get_instant_access_to_several_services_from_one_wallet">Get instant access to several services from one wallet.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <font color='#0386FF'>    Register</font></string>
    <string name="have_an_account_login">Already have an account? <font color='#0386FF'>    Login</font></string>
    <string name="hi">Hi !</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="dashboard">Dashboard</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="_0_00">0.00</string>
    <string name="ngn">NGN</string>
    <string name="top_up">Top Up</string>
    <string name="click_here_to_top_up">top up your wallet balance</string>
    <string name="withdraw">Withdraw Fund</string>
    <string name="withdraw_funds">withdraw funds from wallet</string>
    <string name="fund_wallet">Fund wallet</string>
    <string name="fund_wallet_message">Fund your wallet by entering your desired amount below</string>
    <string name="withdraw_fund_message">withdraw fund from your wallet, by entering your desired amount below</string>
    <string name="enter_amount">Enter amount</string>
    <string name="withdraw_your_funds">Withdraw your funds</string>
    <string name="withdraw_fund">Withdraw fund</string>
    <string name="id">ID:</string>
    <string name="_2569">2569</string>
    <string name="name">Name:</string>
    <string name="sauced_pepper_meat">Sauced Pepper Meat</string>
    <string name="amount">Amount:</string>
    <string name="buy_now">Buy Now</string>
    <string name="list_item">List Item</string>
    <string name="list_an_item_you_want_to_sell">list an item you want to sell</string>
    <string name="view_items">View Items</string>
    <string name="view_the_list_of_all_available_items">view the list of all available items</string>
    <string name="list_your_item">List your item</string>
    <string name="list_your_items_here">list your items for customers to view and buy</string>
    <string name="enter_product_name">Enter product Name</string>
    <string name="enter_product_id">Enter product ID</string>
    <string name="enter_product_amount">Enter product Amount</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="products">Products</string>
    <string name="home">Home</string>
    <string name="full_name">Full Name</string>
</resources>