<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragment_welcome_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/caramel_wallet"
            android:textSize="@dimen/textSize_20sp"
            android:textStyle="bold"
            android:textColor="@color/primary_color"
            />
        <ImageView
            android:id="@+id/fragment_welcome_illus_icon"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_60dp"
            android:src="@drawable/ic_undraw_wallet"
            android:contentDescription="@string/image" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="@dimen/textSize_32sp"
            android:textStyle="bold"
            android:textColor="@color/primary_color"
            />
        <TextView
            android:id="@+id/fragment_welcome_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/get_instant_access_to_several_services_from_one_wallet"
            android:textSize="@dimen/textSize_20sp"
            android:textColor="@color/primary_color"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50dp"
            android:id="@+id/fragment_welcome_login_btn"
            android:layout_marginTop="@dimen/margin_40dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/secondary_color"
            android:background="@drawable/rectangle_button"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_welcome_register_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50dp"
            android:background="@drawable/rectangle_button_outlined"
            app:strokeWidth="@dimen/width_2dp"
            app:cornerRadius="10dp"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/margin_40dp"
            android:textColor="@color/primary_color"
            android:text="@string/register"
            />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>