<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/margin_10dp"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_200"
        app:cardCornerRadius="@dimen/margin_20dp"
        android:layout_margin="@dimen/margin_10dp"
        app:cardBackgroundColor="@color/accent_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/id"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/textSize_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/id_number_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/_2569"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/textSize_18sp"
                app:layout_constraintBottom_toBottomOf="@id/id_number_tv"
                app:layout_constraintStart_toEndOf="@+id/id_number_tv" />

            <TextView
                android:id="@+id/product_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/name"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/textSize_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_number_tv" />

            <TextView
                android:id="@+id/product_name_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/sauced_pepper_meat"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/textSize_18sp"
                app:layout_constraintBottom_toBottomOf="@id/product_title_tv"
                app:layout_constraintStart_toEndOf="@+id/product_title_tv" />

            <TextView
                android:id="@+id/amount_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/amount"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/textSize_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_title_tv" />

            <TextView
                android:id="@+id/amount_name_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/sauced_pepper_meat"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/textSize_18sp"
                app:layout_constraintBottom_toBottomOf="@id/amount_title_tv"
                app:layout_constraintStart_toEndOf="@+id/amount_title_tv" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_buy_now_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_40dp"
                android:background="@drawable/rectangle_button_outlined"
                android:text="@string/buy_now"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:textColor="@color/primary_color"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:strokeWidth="@dimen/width_2dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>