<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.WithdrawFundFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_withdraw_fund_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        app:elevation="@dimen/elevation_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fragment_withdraw_fund_backArrow_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_button"
            tools:ignore="ContentDescription" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_withdraw_fund_toolbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/withdraw_your_funds"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/textSize_24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_fund_message"
            android:layout_marginTop="@dimen/margin_20dp"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/textSize_16sp"
            android:textStyle="normal"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            android:layout_marginTop="@dimen/margin_40dp"
            android:hint="@string/enter_amount"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidthFocused="@color/primary_color"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/icons8_naira_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_withdraw_fund_enter_amount_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_withdraw_fund_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50dp"
            android:layout_marginTop="@dimen/margin_60dp"
            android:text="@string/withdraw_fund"
            android:textAllCaps="false"
            android:textColor="@color/secondary_color"
            android:background="@drawable/rectangle_button"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>